<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/welcomeFragment">

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_feedFragment"
        app:destination="@id/feedFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="false" />

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.stocksocial.ui.auth.WelcomeFragment"
        android:label="@string/welcome_title">
        <action
            android:id="@+id/action_welcomeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.stocksocial.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.stocksocial.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_registerFragment_to_feedFragment"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.stocksocial.ui.feed.FeedFragment"
        android:label="@string/feed">
        <action
            android:id="@+id/action_feedFragment_to_createPostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment" />
        <action
            android:id="@+id/action_feedFragment_to_stockDetailsFragment"
            app:destination="@id/stockDetailsFragment" />
        <action
            android:id="@+id/action_feedFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/stocksFragment"
        android:name="com.stocksocial.ui.stocks.StocksFragment"
        android:label="@string/stocks">
        <action
            android:id="@+id/action_stocksFragment_to_stockDetailsFragment"
            app:destination="@id/stockDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/articlesFragment"
        android:name="com.stocksocial.ui.articles.ArticlesFragment"
        android:label="@string/articles">
        <action
            android:id="@+id/action_articlesFragment_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/hotStocksFragment"
        android:name="com.stocksocial.ui.hotstocks.HotStocksFragment"
        android:label="@string/nav_hot_stocks">
        <action
            android:id="@+id/action_hotStocksFragment_to_stockDetailsFragment"
            app:destination="@id/stockDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.stocksocial.ui.profile.ProfileFragment"
        android:label="@string/profile">
        <action
            android:id="@+id/action_profileFragment_to_createPostFragment"
            app:destination="@id/createPostFragment" />
        <action
            android:id="@+id/action_profileFragment_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_stockDetailsFragment"
            app:destination="@id/stockDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/stockDetailsFragment"
        android:name="com.stocksocial.ui.stocks.StockDetailsFragment"
        android:label="@string/stock_details">
        <argument
            android:name="symbol"
            app:argType="string" />
        <action
            android:id="@+id/action_stockDetailsFragment_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/portfolioFragment"
        android:name="com.stocksocial.ui.profile.PortfolioFragment"
        android:label="@string/nav_portfolio" />

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.stocksocial.ui.profile.UserProfileFragment"
        android:label="@string/profile">
        <argument
            android:name="username"
            app:argType="string" />
        <action
            android:id="@+id/action_userProfileFragment_to_stockDetailsFragment"
            app:destination="@id/stockDetailsFragment" />
        <action
            android:id="@+id/action_userProfileFragment_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPostFragment"
        android:name="com.stocksocial.ui.post.CreatePostFragment"
        android:label="@string/create_post" />

    <fragment
        android:id="@+id/postDetailsFragment"
        android:name="com.stocksocial.ui.post.PostDetailsFragment"
        android:label="@string/post_details">
        <argument
            android:name="postId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/articleDetailsFragment"
        android:name="com.stocksocial.ui.articles.ArticleDetailsFragment"
        android:label="@string/article_details">
        <argument
            android:name="articleId"
            app:argType="string" />
    </fragment>

</navigation>
